@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<configurations lcid_type="UserExe" show_language_selector="False" language_selector_title="" language_selector_ok="OK" language_selector_cancel="Cancel" configuration_no_match_message="" ui_level="basic" fileversion="0.7.0.0" productversion="0.7.0.0" log_enabled="False" log_file="#TEMPPATH\dotNetInstallerLog.txt">
+<configurations lcid_type="UserExe" show_language_selector="False" language_selector_title="" language_selector_ok="OK" language_selector_cancel="Cancel" configuration_no_match_message="" ui_level="basic" fileversion="0.7.2.0" productversion="0.7.2.0" log_enabled="False" log_file="#TEMPPATH\dotNetInstallerLog.txt">
   <schema version="2.0.81.0" generator="dotNetInstaller InstallerEditor" />
   <fileattributes>
     <fileattribute name="ProductName" value="Swish" />
@@ -10,7 +10,7 @@
   <configuration dialog_caption="Swish Installer" dialog_message="In order to install Swish you must first install these components:" dialog_message_uninstall="" dialog_bitmap="#APPPATH\banner.bmp" skip_caption="Skip" install_caption="Install" uninstall_caption="Uninstall" cancel_caption="Close" status_installed=" (Installed)" status_notinstalled="" failed_exec_command_continue="" installation_completed="" uninstallation_completed="" installation_none="Swish is already installed!" uninstallation_none="Swish is not installed!" installing_component_wait="Installing %s. Wait, this operation could take some time ..." uninstalling_component_wait="Uninstalling %s. Wait, this operation could take some time ..." reboot_required="To continue the installation you must restart your computer. Restart now?" must_reboot_required="False" dialog_otherinfo_caption="" dialog_otherinfo_link="" complete_command="" complete_command_silent="" complete_command_basic="" wait_for_complete_command="True" auto_close_if_installed="True" auto_close_on_error="True" reload_on_error="False" dialog_show_installed="False" dialog_show_uninstalled="False" dialog_show_required="False" cab_dialog_message="%s" cab_cancelled_message="" cab_dialog_caption="" cab_path="#TEMPPATH\#GUID" cab_path_autodelete="True" dialog_default_button="cancel" dialog_position="" dialog_components_list_position="" dialog_message_position="" dialog_bitmap_position="" dialog_otherinfo_link_position="" dialog_osinfo_position="" dialog_install_button_position="" dialog_cancel_button_position="" dialog_skip_button_position="" auto_start="True" auto_continue_on_reboot="False" reboot_cmd="" show_progress_dialog="False" show_cab_dialog="True" disable_wow64_fs_redirection="False" administrator_required="False" administrator_required_message="APPLICATION_NAME installation requires administration rights." type="install" lcid_filter="" language_id="" language="" os_filter="" os_filter_min="" os_filter_max="" processor_architecture_filter="" supports_install="True" supports_uninstall="True">
     <component package="#CABPATH\swish-x86.msi" cmdparameters="" cmdparameters_silent="" cmdparameters_basic="" uninstall_package="" uninstall_cmdparameters="/qb-" uninstall_cmdparameters_silent="/qn" uninstall_cmdparameters_basic="/qb-" disable_wow64_fs_redirection="False" id="swish-Win32" display_name="swish-x86.msi" uninstall_display_name="" os_filter="" os_filter_min="" os_filter_max="" os_filter_lcid="" type="msi" installcompletemessage="" uninstallcompletemessage="" mustreboot="False" reboot_required="" must_reboot_required="False" failed_exec_command_continue="" allow_continue_on_error="False" default_continue_on_error="False" required_install="True" required_uninstall="True" selected_install="True" selected_uninstall="True" note="" processor_architecture_filter="x86" status_installed="" status_notinstalled="" supports_install="True" supports_uninstall="True" show_progress_dialog="False" show_cab_dialog="False" />
     <component package="#CABPATH\swish-x64.msi" cmdparameters="" cmdparameters_silent="" cmdparameters_basic="" uninstall_package="" uninstall_cmdparameters="/qb-" uninstall_cmdparameters_silent="/qn" uninstall_cmdparameters_basic="/qb-" disable_wow64_fs_redirection="False" id="swish-x64" display_name="swish-x64.msi" uninstall_display_name="" os_filter="" os_filter_min="" os_filter_max="" os_filter_lcid="" type="msi" installcompletemessage="" uninstallcompletemessage="" mustreboot="False" reboot_required="" must_reboot_required="False" failed_exec_command_continue="" allow_continue_on_error="False" default_continue_on_error="False" required_install="True" required_uninstall="True" selected_install="True" selected_uninstall="True" note="" processor_architecture_filter="x64" status_installed="" status_notinstalled="" supports_install="True" supports_uninstall="True" show_progress_dialog="False" show_cab_dialog="False" />
-    <embedfile sourcefilepath=".\bin\Release-Win32\swish-0.7.0.msi" targetfilepath="swish-x86.msi" />
-    <embedfile sourcefilepath=".\bin\Release-x64\swish-0.7.0.msi" targetfilepath="swish-x64.msi" />
+    <embedfile sourcefilepath=".\bin\Release-Win32\swish-0.7.2.msi" targetfilepath="swish-x86.msi" />
+    <embedfile sourcefilepath=".\bin\Release-x64\swish-0.7.2.msi" targetfilepath="swish-x64.msi" />
   </configuration>
 </configurations>
