@@ -176,7 +176,7 @@ CViewCallback::CViewCallback(const apidl_t& folder_pidl) :
     m_folder_pidl(folder_pidl), m_hwnd_view(NULL), m_first_command_id(0),
     m_winsparkle(
         "http://www.swish-sftp.org/autoupdate/appcast.xml", L"Swish",
-        L"0.7.0", L"", "Software\\Swish\\Updates") {}
+        L"0.7.2", L"", "Software\\Swish\\Updates") {}
 
 /**
  * The folder window is being created.
